--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: green;
+    color: rgb(128, 0, 85);
 }
 body{
-    background-color: aquamarine;
+    background-color: rgb(255, 195, 127);
 }
